2007-09-28  Wenji Huang <wenji.huang@oracle.com>

        * lib/systemtap.exp: New proc get_system_info.
	* lib/stap_run.exp: New proc print_system_info.

2007-09-27  Masami Hiramatsu <mhiramat@redhat.com>

	PR3916
	* systemtap.sample/gtod.*: New test for gettimeofday accuracy.

2007-09-25  Martin Hunt  <hunt@redhat.com>

	* systemtap.context/backtrace.tcl: Handle single line timer.profile
	backtraces.

2007-09-25  David Smith  <dsmith@redhat.com>

	* systemtap.base/marker.exp: Improved regexp to work correctly on
	kernels with no markers.
	
	* systemtap.base/marker.exp: Updated for the 9/18/2007 markers
	patch.

2007-09-24  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.samples/examples.exp: New file, replacing
	* buildok/examples.stp: Removed.

2007-09-24  Frank Ch. Eigler  <fche@elastic.org>

	* buildok/*-embedded.stp: New test case for every embedded-C 
	function in the tapsets.

2007-09-22  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.maps/linear_overunder.exp: Correct for actual data.

2007-09-22  Frank Ch. Eigler  <fche@elastic.org>

	PR 5057.
	* systemtap.maps/linear_nearlyempty.*: New test for
	histogram printing elision.

2007-09-22  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/optim.exp: Wait for both result lines.

2007-09-21  Martin Hunt  <hunt@redhat.com>

	* systemtap.maps/linear*: Updated linear histogram tests.

	* lib/stap_run2.exp (stap_run2): Use send_log()
	instead of puts to save failure context in the log.

2007-09-21  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/optim.exp/stp: New test for rhbz# 300121.

2007-09-18  David Smith  <dsmith@redhat.com>

	* systemtap.base/procfs.exp: New test case.
	* lib/stap_run.exp (stap_run): Handles the case where the stap
	'-m' option was used.

2007-09-17  David Smith  <dsmith@redhat.com>

	* semko/procfs06.stp: New test case.
	* semko/procfs07.stp: Ditto.
	* semko/procfs08.stp: Ditto.
	* semko/procfs09.stp: Ditto.
	* semko/procfs10.stp: Ditto.
